<resources>
    <string name="app_name">荣焱市场</string>
    <string name="homepage">首页</string>
    <string name="classification">分类</string>
    <string name="setting">设置</string>
    <string name="newest">最新</string>
    <string name="hotest">最热</string>
    <string name="loading">加载中...</string>
    <string name="app_detail">应用详情</string>
    <string name="introduction">介绍</string>
    <string name="more">更多</string>
    <string name="take_back">收回</string>
    <string name="sliding_star_rating">滑动星星评分</string>
    <string name="comprehensive_score">综合评分</string>
    <string name="you_graded">(您已评分)</string>
    <string name="apply_update">应用更新</string>
    <string name="apply_uninstall">确定要卸载吗?</string>
    <string name="my_order">我的订单</string>
    <string name="current_version">当前版本</string>
    <string name="open">打开</string>
    <string name="down">下载</string>
    <string name="installs">次安装</string>
    <string name="install">安装</string>
    <string name="installing">安装中</string>
    <string name="update">更新</string>
    <string name="all_updates">全部更新</string>
    <string name="network_connection">网络已连接</string>
    <string name="network_disconnect">网络断开连接</string>
    <string name="network_failed_check_configuration">您的网络连接失败，请检查网络配置</string>
    <string name="network_fail_again">服务器繁忙，请稍后重试！</string>
    <string name="download_failed_again">下载失败，请重新下载</string>
    <string name="network_exceptions_again">当前网络异常，请重试！</string>
    <string name="network_fails_again">网络连接失败，请重试！</string>
    <string name="network_exceptions">网络异常，请重新检查网络连接情况</string>
    <string name="scores">人评分</string>
    <string name="fractions">.0分</string>
    <string name="no_more">没有更多了</string>
    <string name="need_download_installation_score">您需要下载使用这款APP以后才能评分</string>
    <string name="sn_null">sn号为空</string>
    <string name="broker_null">渠道商代码为空</string>
    <string name="model_null">设备型号为空</string>
    <string name="model_version_null">软件版本为空</string>
    <string name="devicetoken_null">devicetoken为空</string>
    <string name="uuid_null">UUID为空</string>
    <string name="back">返回</string>
    <string name="no_search_results">无搜索结果</string>
    <string name="search_application">搜索应用</string>
    <string name="search">搜索</string>
    <string name="homepage_recommendation">首页推荐</string>
    <string name="remaining_storage_space_insufficient_downloaded">剩余存储空间不足，无法下载安装</string>
    <string name="no_details">无详情</string>
    <string name="sure">升级</string>
    <string name="uninstall">卸载</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="download_failed_restart">升级包下载失败，请重启应用</string>
    <string name="no_application_under_classification">该分类下没有应用</string>
    <string name="shopkeeper_busy_system_tired">掌柜很忙，系统很累~</string>
    <string name="application_cannot_opened">应用没有启动入口，无法打开</string>

    <string name="add_tag">添加标签</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登录成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有位置信息权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有存储权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。</string>
</resources>
