<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_10">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/backage_color">
        <ImageView
            android:id="@+id/activity_update_back_img"
            android:layout_width="71dp"
            android:layout_height="38dp"
            android:src="@drawable/back"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="50dp"
            android:layout_marginLeft="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/white_14_10"
            android:text="@string/back"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="31dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/white_16_10"
            android:text="@string/apply_update"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/activity_update_btn"
            android:layout_width="76dp"
            android:layout_height="27dp"
            android:background="@drawable/rectangle_button_blackwhite_bg"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            style="@style/gray33_14_10"
            android:text="@string/all_updates"/>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/activity_update_liy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:orientation="vertical"/>
    </ScrollView>
</LinearLayout>
