<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_10"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/backage_color">
        <ImageView
            android:id="@+id/setting_back_img"
            android:layout_width="62dp"
            android:layout_height="76dp"
            android:src="@drawable/back"
            android:padding="20dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/setting_back_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:textColor="@color/white_10"
            android:textSize="28sp"
            android:text="@string/app_detail"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/setting_refresh_img"
            android:layout_width="68dp"
            android:layout_height="69dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="150dp"
            android:src="@drawable/button_refresh_land_style"
            android:padding="20dp"/>

        <Button
            android:id="@+id/setting_update_btn"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:background="@drawable/rectangle_button_blackwhite_bg"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="32dp"
            style="@style/gray33_20_10"
            android:text="@string/all_updates"/>
    </FrameLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_long" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="366"
            android:layout_height="match_parent"
            android:background="@color/grayF2_10">
            <FrameLayout
                android:id="@+id/setting_update_fly"
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <TextView
                    android:id="@+id/setting_update_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    style="@style/gray37_24_10"
                    android:text="@string/apply_update"/>
                <View
                    android:id="@+id/setting_update_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line_short_gray"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/setting_order_fly"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="65dp"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/setting_order_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    style="@style/gray37_24_10"
                    android:text="@string/my_order"/>
                <View
                    android:id="@+id/setting_order_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line_short_gray"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <TextView
                android:id="@+id/setting_edition_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="17dp"
                style="@style/gray37_18_10" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/setting_right_fly"
            android:layout_width="0dp"
            android:layout_weight="1000"
            android:layout_height="match_parent">
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
