<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/fragment_setting_update_fly"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_update"
                style="@style/gray37_19_10"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/fragment_setting_num_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                style="@style/white_14_10"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:background="@drawable/red_oval"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/enter"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line_short_gray"
                android:layout_gravity="bottom"/>

        </FrameLayout>
        <FrameLayout
            android:id="@+id/fragment_setting_order_fly"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_order"
                style="@style/gray37_19_10"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/enter"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line_short_gray"
                android:layout_gravity="bottom"/>

        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="23dp"
                android:background="@drawable/setting_logo_port"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/grayB1_16_10"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/fragment_setting_version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/grayB1_12_10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>
