<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/search_bg_port">
                <LinearLayout
                    android:id="@+id/fragment_recommend_search_liy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/search_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_application"
                        android:layout_marginLeft="10dp"
                        style="@style/gray7B_24_10"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/fragment_recommend_search_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    style="@style/gray4A_24_10"
                    android:background="@null"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:imeOptions="actionSearch"
                    android:inputType="text"/>
            </FrameLayout>

            <fragment
                android:id="@+id/fragment_recommend_viewpager"
                android:name="com.rongyan.appstore.viewpager.CycleViewPager"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginRight="34dp"
                android:layout_marginLeft="34dp"/>
            <FrameLayout
                android:id="@+id/fragment_recommend_liy"
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_marginTop="37dp"
                android:background="@drawable/rectangle_button_redwhite_bg2"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/fragment_recommend_btn"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_button_red_bg2"
                    android:layout_gravity="center_horizontal"
                    style="@style/white_20_10"/>

                <TextView
                    android:id="@+id/fragment_recommend_hotest_txt"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    style="@style/red_20_10"
                    android:text="@string/hotest"
                    android:gravity="center"
                    android:layout_gravity="left"/>
                <TextView
                    android:id="@+id/fragment_recommend_newest_txt"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    style="@style/red_20_10"
                    android:text="@string/newest"
                    android:gravity="center"
                    android:layout_gravity="right"/>
            </FrameLayout>
            <ListView
                android:id="@+id/fragment_recommend_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:divider="@null">
            </ListView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>